fix genre wrap & header burger auth text

--- a/src/Pages/Movies/Movies_Body/MoviesBody.css
+++ b/src/Pages/Movies/Movies_Body/MoviesBody.css
@@ -46,6 +46,7 @@
 
 .MoviesText {
  display: flex;
+ flex-wrap: wrap;
  gap: 5px;
 }
 
